z-index go/go_out fix

--- a/styles/card.module.css
+++ b/styles/card.module.css
@@ -106,6 +106,13 @@
   animation: spin 0.5s linear 1;
 }
 
+/* .card_link {
+  width: 100px;
+  height: 120px;
+  text-decoration: none;
+  color: black;
+} */
+
 .card_title {
   /* font-size: 25px; */
   font-size: 15px;
@@ -403,6 +410,8 @@
 
   cursor: pointer;
   transition: transform 0.2s;
+
+  z-index: 2;
 }
 
 .go:hover,
